	PR c++/49568 	* method.c (make_thunk, use_thunk): Copy DECL_COMDAT.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@175938 138bc75d-0d04-0410-961f-82ee72b054a4